--- a/Poke.DistributedSystems/Web.config
+++ b/Poke.DistributedSystems/Web.config
@@ -5,6 +5,8 @@
   -->
 <configuration>
   <appSettings>
+    <add key="typeUrl" value="https://pokeapi.co/api/v2/type/" />
+    <add key="moveUrl" value="https://pokeapi.co/api/v2/move/" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
